refactor: 백엔드 서버 URL 설정 및 WebSocket 연결 방식 개선
프론트엔드에서 백엔드 서버 URL을 설정하고 WebSocket 연결을 관리하는 방식을 개선합니다.
- 개발 환경과 운영 환경에 따라 서버 주소와 프로토콜(ws 또는 wss)을 동적으로 설정하는 `config.js` 파일을 추가합니다.
- `gomoku.html` 및 `spectator.html` 파일에서 WebSocket 연결을 설정할 때 `config.js` 파일을 사용하여 백엔드 서버 URL을 가져오도록 변경합니다.
- 이를 통해 개발 환경과 운영 환경에서의 설정 변경을 용이하게 하고, 코드의 재사용성을 높입니다.
- 이전에는 각 HTML 파일에서 직접 WebSocket URL을 하드코딩했으나, 이제는 환경 설정에 따라 동적으로 URL을 가져오도록 변경되어 유지보수가 용이해집니다.

--- a/public/en/spectator.html
+++ b/public/en/spectator.html
@@ -112,6 +112,7 @@
             opacity: 0.2;
         }
     </style>
+    <script src="/config.js"></script>
 </head>
 
 <body>
@@ -133,7 +134,8 @@
     <script language="javascript" type="text/javascript">
         window.onload = function () {
             // WebSocket setup
-            const socket = new WebSocket('ws' + (location.protocol === 'https:' ? 's' : '') + '://' + window.location.host + '/spectator');
+            // Backend server URL - using configuration
+            const socket = new WebSocket(window.appConfig.getWebSocketUrl('/spectator'));
 
             // Game variables
             var check = Array.from({ length: 15 * 15 }, () => ({ state: false, color: "" }));
