--- a/public/ko/gomoku.html
+++ b/public/ko/gomoku.html
@@ -147,6 +147,7 @@
             opacity: 0.2;
         }
     </style>
+    <script src="/config.js"></script>
 </head>
 
 <body>
@@ -176,7 +177,8 @@
     <script language="javascript" type="text/javascript">
         // WebSocket setup
         writing("서버 연결중");
-        const socket = new WebSocket('ws' + (location.protocol === 'https:' ? 's' : '') + '://' + window.location.host + '/game');
+        // Backend server URL - using configuration
+        const socket = new WebSocket(window.appConfig.getWebSocketUrl('/game'));
 
         // Game variables
         var check = Array.from({ length: 15 * 15 }, () => ({ state: false, color: "" }));
