refactor: Nginx 설정 추가 및 클린 URL 지원
Nginx 설정 파일을 추가하고 정적 파일 캐싱, 보안 헤더 설정, 클린 URL 지원 등을 개선합니다.

- `/nginx.conf` 파일 추가: Nginx 설정을 사용자 정의하여 정적 파일 캐싱, 보안 헤더 추가, 클린 URL 지원 및 에러 페이지 처리를 개선합니다
- `.html` 확장자를 제거한 클린 URL을 지원하도록 수정합니다.
-  일부 `.html` 경로를 클린 URL로 변경합니다.
- GitHub 이슈 링크를 `stonify5` 저장소로 수정합니다.
-  개선된 성능과 향상된 보안을 제공합니다.

--- a/public/en/index.html
+++ b/public/en/index.html
@@ -105,13 +105,13 @@
     </header>
     <main role="main">
         <p>Here's a simple guide to start playing Gomoku online.</p>
-        <p>1. Go to the <a href="/en/gomoku.html" class="button-link">Online Gomoku page</a> to access the game.</p>
+        <p>1. Go to the <a href="/en/gomoku" class="button-link">Online Gomoku page</a> to access the game.</p>
         <p>2. Wait for the "Connecting to the server" message to appear on the page.</p>
         <p>3. Once you see the "Matching players" message, the server connection is complete.</p>
         <p>4. When matched with an opponent, place stones on the board to enjoy the game!</p>
-        <p><a href="/en/spectator.html" class="button-link">Go to Spectator Page</a></p>
+        <p><a href="/en/spectator" class="button-link">Go to Spectator Page</a></p>
         <p>Visit the Spectator Page to watch and enjoy the game!</p>
-        <p>For more information and features, check out the <a href="/en/info.html">Site Introduction page</a>.</p>
+        <p>For more information and features, check out the <a href="/en/info">Site Introduction page</a>.</p>
         <p>Play and enjoy the online Gomoku game based on standard Gomoku rules!</p>
     </main>
 
