--- a/public/ja/index.html
+++ b/public/ja/index.html
@@ -104,13 +104,13 @@
     </header>
     <main role="main">
         <p>オンライン五目を楽しむための簡単なスタート方法です。</p>
-        <p>1. <a href="/ja/gomoku.html" class="button-link">オンライン五目ページに移動</a>してオンライン五目にアクセスします。</p>
+        <p>1. <a href="/ja/gomoku" class="button-link">オンライン五目ページに移動</a>してオンライン五目にアクセスします。</p>
         <p>2. ページで "サーバー接続中" メッセージが表示されるまでお待ちください。</p>
         <p>3. "ユーザーマッチング中" メッセージが表示されたら、サーバーとの接続が完了しました。</p>
         <p>4. 相手とマッチングされたら、五目盤に石を置いてゲームをお楽しみください！</p>
-        <p><a href="/ja/spectator.html" class="button-link">観戦ページに移動</a></p>
+        <p><a href="/ja/spectator" class="button-link">観戦ページに移動</a></p>
         <p>観戦ページに移動してゲームを観戦し、楽しんでください！</p>
-        <p>詳細な情報や機能については、<a href="/ja/info.html">サイト紹介ページ</a>で確認できます。</p>
+        <p>詳細な情報や機能については、<a href="/ja/info">サイト紹介ページ</a>で確認できます。</p>
         <p>標準の五目並べのルールに基づいたオンライン五目ゲームをプレイして楽しんでください！</p>
     </main>
 
