--- a/public/ja/spectator.html
+++ b/public/ja/spectator.html
@@ -5,9 +5,9 @@
     <title>Stonify5 - 観戦</title>
 
     <!-- Language Alternates -->
-    <link rel="alternate" hreflang="ko" href="/ko/spectator.html" />
-    <link rel="alternate" hreflang="en" href="/en/spectator.html" />
-    <link rel="alternate" hreflang="ja" href="/ja/spectator.html" />
+    <link rel="alternate" hreflang="ko" href="/ko/spectator" />
+    <link rel="alternate" hreflang="en" href="/en/spectator" />
+    <link rel="alternate" hreflang="ja" href="/ja/spectator" />
     <link rel="alternate" hreflang="x-default" href="/" />
 
     <!-- Basic Meta Tags -->
