--- a/public/ko/gomoku.html
+++ b/public/ko/gomoku.html
@@ -5,9 +5,9 @@
     <title>Stonify5 - 바로시작</title>
 
     <!-- Language Alternates -->
-    <link rel="alternate" hreflang="ko" href="/ko/gomoku.html" />
-    <link rel="alternate" hreflang="en" href="/en/gomoku.html" />
-    <link rel="alternate" hreflang="ja" href="/ja/gomoku.html" />
+    <link rel="alternate" hreflang="ko" href="/ko/gomoku" />
+    <link rel="alternate" hreflang="en" href="/en/gomoku" />
+    <link rel="alternate" hreflang="ja" href="/ja/gomoku" />
     <link rel="alternate" hreflang="x-default" href="/" />
 
     <!-- Basic Meta Tags -->
