--- a/public/ko/index.html
+++ b/public/ko/index.html
@@ -104,13 +104,13 @@
     </header>
     <main role="main">
         <p>온라인오목을 즐기기 위한 간단한 시작 방법입니다.</p>
-        <p>1. <a href="/ko/gomoku.html" class="button-link">온라인오목 페이지로 이동</a>하여 온라인오목에 접속하세요.</p>
+        <p>1. <a href="/ko/gomoku" class="button-link">온라인오목 페이지로 이동</a>하여 온라인오목에 접속하세요.</p>
         <p>2. 페이지에서 "서버 연결중" 메시지가 나타날 때까지 기다립니다.</p>
         <p>3. "유저 매칭중" 메시지가 나타나면 서버와 연결이 완료된 것입니다.</p>
         <p>4. 상대와 매칭이 되면 오목판에 돌을 놓아 게임을 즐기세요!</p>
-        <p><a href="/ko/spectator.html" class="button-link">관전 페이지로 이동</a></p>
+        <p><a href="/ko/spectator" class="button-link">관전 페이지로 이동</a></p>
         <p>관전 페이지로 이동하면 게임을 감상하실 수 있습니다!</p>
-        <p>더 자세한 정보와 기능은 <a href="/ko/info.html">사이트 소개 페이지</a>에서 확인할 수 있습니다.</p>
+        <p>더 자세한 정보와 기능은 <a href="/ko/info">사이트 소개 페이지</a>에서 확인할 수 있습니다.</p>
         <p> 표준 고모쿠 룰(standard gomoku)에 기반한 온라인 오목 게임을 플레이하고 즐기세요!</p>
     </main>
 
