fix:  `yourdomain.com` 관련 URL 수정 및 `ads.txt` 추가
`yourdomain.com`을 `stonify5.com`으로 변경하고,  `ads.txt` 파일을 추가합니다.

-  `index.html`, `robots.txt`, `sitemap.xml` 파일의  `yourdomain.com`  URL을 `stonify5.com`으로 수정합니다
-  `game.html` 및 `spectator.html` 파일의  hreflang 태그의 경로를 `/game` 및 `/spectator`로 간소화합니다
-  Google AdSense를 위한 `ads.txt` 파일을 추가합니다
-  `sitemap.xml`의 마지막 수정 날짜를 업데이트합니다

--- a/public/game.html
+++ b/public/game.html
@@ -8,9 +8,9 @@
 
     <meta name="description" content="Play real-time Gomoku game with players worldwide.">
 
-    <link rel="alternate" hreflang="ko" href="/ko/game.html">
-    <link rel="alternate" hreflang="en" href="/en/game.html">
-    <link rel="alternate" hreflang="ja" href="/ja/game.html">
+    <link rel="alternate" hreflang="ko" href="/ko/game">
+    <link rel="alternate" hreflang="en" href="/en/game">
+    <link rel="alternate" hreflang="ja" href="/ja/game">
 
     <meta property="og:title" content="Stonify5 - Game">
     <meta property="og:description" content="Play real-time Gomoku game">
