--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yourdomain.com">
+    <meta property="og:url" content="https://stonify5.com">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Stonify5 - Online Gomoku">
@@ -51,10 +51,10 @@
                 </p>
 
                 <div class="cta-buttons">
-                    <a href="/game.html" class="btn btn-primary btn-lg">
+                    <a href="/game" class="btn btn-primary btn-lg">
                         <span data-i18n="home.playGame">게임 시작</span>
                     </a>
-                    <a href="/spectator.html" class="btn btn-outline btn-lg">
+                    <a href="/spectator" class="btn btn-outline btn-lg">
                         <span data-i18n="home.spectate">관전하기</span>
                     </a>
                 </div>
