--- a/public/spectator.html
+++ b/public/spectator.html
@@ -8,9 +8,9 @@
 
     <meta name="description" content="Watch real-time Gomoku games from players worldwide.">
 
-    <link rel="alternate" hreflang="ko" href="/ko/spectator.html">
-    <link rel="alternate" hreflang="en" href="/en/spectator.html">
-    <link rel="alternate" hreflang="ja" href="/ja/spectator.html">
+    <link rel="alternate" hreflang="ko" href="/ko/spectator">
+    <link rel="alternate" hreflang="en" href="/en/spectator">
+    <link rel="alternate" hreflang="ja" href="/ja/spectator">
 
     <meta property="og:title" content="Stonify5 - Spectator">
     <meta property="og:description" content="Watch real-time Gomoku games">
