feat: 광고 추가 및 스타일 적용
Google AdSense를 통한 광고 추가 및 디자인 구현

- `public/css/components/ads.css` 파일 추가: 다양한 크기의 광고를 위한 스타일 정의
- `public/css/main.css` 수정: `ads.css` 파일 import
- `public/game.html`, `public/index.html`, `public/spectator.html` 수정:  Google AdSense 코드 추가 및 광고 컨테이너 추가
- `public/js/services/ads.js` 파일 추가: AdSense 로딩, 광고 차단 감지 및 처리, 반응형 광고 설정, 지연 로딩 기능 포함
- 게임 페이지 사이드바, 홈 페이지 상단 및 하단 배너, 관전자 모드 상단 배너에 광고 추가
- 광고 차단 감지 시, 광고 컨테이너 숨김 및 선택적 메시지 표시 기능 구현
- 반응형 디자인을 위해 다양한 화면 크기에 맞는 광고 스타일 조정
- 광고 로딩 오류 발생 시 재시도 기능 추가
- 광고 성능 분석을 위한 추적 기능 추가 (구현은 향후 진행 예정)

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,9 @@
     <meta name="twitter:title" content="Stonify5 - Online Gomoku">
     <meta name="twitter:description" content="Experience real-time multiplayer Gomoku gameplay">
     <meta name="twitter:image" content="/assets/images/og.svg">
+    
+    <!-- Google AdSense Auto Ads -->
+    <meta name="google-adsense-account" content="ca-pub-7004859261139401">
 
     <link rel="icon" href="/assets/images/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="/assets/images/apple-touch-icon.svg">
@@ -28,6 +31,10 @@
 
     <link rel="stylesheet" href="/css/main.css">
     <script src="/js/config.js"></script>
+    
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7004859261139401"
+            crossorigin="anonymous"></script>
 </head>
 
 <body data-page="home" data-theme="dark">
@@ -75,6 +82,19 @@
                 </div>
             </div>
 
+            <!-- Top Banner Ad -->
+            <div class="ad-container ad-banner">
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-7004859261139401"
+                     data-ad-slot="8405999782"
+                     data-ad-format="auto"
+                     data-full-width-responsive="true"></ins>
+                <script>
+                     (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+            </div>
+
             <div class="features-grid">
                 <div class="feature-card glass-hover">
                     <div class="feature-icon">⚡</div>
@@ -96,6 +116,18 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Bottom Rectangle Ad -->
+            <div class="ad-container ad-rectangle">
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-7004859261139401"
+                     data-ad-slot="4343449930"
+                     data-ad-format="rectangle"></ins>
+                <script>
+                     (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+            </div>
         </div>
     </main>
 
@@ -112,6 +144,7 @@
     <script src="/js/services/storage.js"></script>
     <script src="/js/services/audio.js"></script>
     <script src="/js/services/websocket.js"></script>
+    <script src="/js/services/ads.js"></script>
     <script src="/js/ui/modal.js"></script>
     <script src="/js/ui/header.js"></script>
     <script src="/js/app.js"></script>
