--- a/public/spectator.html
+++ b/public/spectator.html
@@ -18,12 +18,19 @@
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:type" content="game">
+    
+    <!-- Google AdSense Auto Ads -->
+    <meta name="google-adsense-account" content="ca-pub-7004859261139401">
 
     <link rel="icon" href="/assets/images/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="/assets/images/apple-touch-icon.svg">
     <link rel="stylesheet" href="/css/main.css">
 
     <script src="/js/config.js"></script>
+    
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7004859261139401"
+            crossorigin="anonymous"></script>
 </head>
 
 <body data-page="spectator" data-theme="dark">
@@ -46,6 +53,19 @@
 
         <div id="userNames" class="glass">게임을 찾는 중...</div>
 
+        <!-- Top Banner Ad -->
+        <div class="ad-container ad-banner">
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-7004859261139401"
+                 data-ad-slot="1220778362"
+                 data-ad-format="auto"
+                 data-full-width-responsive="true"></ins>
+            <script>
+                 (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
+
         <div class="board-container">
             <canvas id="gameBoard">
                 <p data-i18n="error.canvas">Canvas not supported</p>
@@ -66,6 +86,7 @@
     <script src="/js/services/storage.js"></script>
     <script src="/js/services/audio.js"></script>
     <script src="/js/services/websocket.js"></script>
+    <script src="/js/services/ads.js"></script>
     <script src="/js/game/board.js"></script>
     <script src="/js/game/stone.js"></script>
     <script src="/js/spectator/spectator.js"></script>
