refactor: 광고 스타일 및 동작 수정
광고 표시 방식과 AdSense 적용 방식을 개선합니다.

- `ads.css` 파일에서 광고 컨테이너 스타일을 수정하여 반응형 디자인을 개선하고,  일부 CSS 속성을 변경하여 레이아웃을 최적화합니다.
- `game.html`, `index.html`, `spectator.html` 파일에서 AdSense 광고 코드의 `style` 속성과 `data-ad-format` 속성을 수정하여 광고 크기와 표시 형식을 조정합니다.
- `ads.js` 파일에서 AdSense 초기화 로직을 개선하고, 광고 차단 여부 확인 및 에러 처리를 개선합니다.  AdSense 로딩 실패 시 재시도 횟수를 제한하고, 광고 차단 감지 시 광고 표시를 건너뜁니다.  또한,  `setTimeout`을 사용하여 AdSense 초기화를 지연시켜 페이지 로딩 성능을 향상시킵니다.  기존의 광고 차단 메시지 표시 기능은 제거합니다.
- 전반적으로 광고의 표시 및 동작을 개선하여 사용자 경험을 향상시키고, 광고 로딩 관련 문제를 해결합니다.

--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@
             <!-- Top Banner Ad -->
             <div class="ad-container ad-banner">
                 <ins class="adsbygoogle"
-                     style="display:block"
+                     style="display:block; width:100%;"
                      data-ad-client="ca-pub-7004859261139401"
                      data-ad-slot="8405999782"
                      data-ad-format="auto"
@@ -120,7 +120,7 @@
             <!-- Bottom Rectangle Ad -->
             <div class="ad-container ad-rectangle">
                 <ins class="adsbygoogle"
-                     style="display:block"
+                     style="display:block; width:100%;"
                      data-ad-client="ca-pub-7004859261139401"
                      data-ad-slot="4343449930"
                      data-ad-format="rectangle"></ins>
