--- a/public/game.html
+++ b/public/game.html
@@ -70,10 +70,10 @@
             <!-- Sidebar Ad -->
             <div class="sidebar-ad">
                 <ins class="adsbygoogle"
-                     style="display:block"
+                     style="display:block; width:160px; height:600px;"
                      data-ad-client="ca-pub-7004859261139401"
                      data-ad-slot="9383205380"
-                     data-ad-format="vertical"></ins>
+                     data-ad-format="auto"></ins>
                 <script>
                      (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
