--- a/public/spectator.html
+++ b/public/spectator.html
@@ -56,7 +56,7 @@
         <!-- Top Banner Ad -->
         <div class="ad-container ad-banner">
             <ins class="adsbygoogle"
-                 style="display:block"
+                 style="display:block; width:100%;"
                  data-ad-client="ca-pub-7004859261139401"
                  data-ad-slot="1220778362"
                  data-ad-format="auto"
