refactor: 광고 코드 스타일 및 구조 개선
광고 코드의 가독성 및 유지보수성을 향상시키기 위해 스타일과 구조를 개선합니다.

- `game.html`, `index.html`, `spectator.html` 파일에서 광고 코드의 들여쓰기 및 줄 바꿈을 수정하여 가독성을 높였습니다
- 불필요한 줄 바꿈을 제거하고 코드를 간결하게 만들었습니다
- 광고 코드의 구조를 재정렬하여 유지보수를 용이하게 만들었습니다

이 변경으로 광고 코드의 가독성과 유지보수성이 향상되어 향후 수정 및 관리가 더욱 편리해집니다.

--- a/public/spectator.html
+++ b/public/spectator.html
@@ -18,7 +18,7 @@
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:type" content="game">
-    
+
     <!-- Google AdSense Auto Ads -->
     <meta name="google-adsense-account" content="ca-pub-7004859261139401">
 
@@ -27,10 +27,10 @@
     <link rel="stylesheet" href="/css/main.css">
 
     <script src="/js/config.js"></script>
-    
+
     <!-- Google AdSense -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7004859261139401"
-            crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>
 </head>
 
 <body data-page="spectator" data-theme="dark">
@@ -55,14 +55,10 @@
 
         <!-- Top Banner Ad -->
         <div class="ad-container ad-banner">
-            <ins class="adsbygoogle"
-                 style="display:block; width:100%;"
-                 data-ad-client="ca-pub-7004859261139401"
-                 data-ad-slot="1220778362"
-                 data-ad-format="auto"
-                 data-full-width-responsive="true"></ins>
+            <ins class="adsbygoogle" style="display:block; width:100%;" data-ad-client="ca-pub-7004859261139401"
+                data-ad-slot="1220778362" data-ad-format="auto" data-full-width-responsive="true"></ins>
             <script>
-                 (adsbygoogle = window.adsbygoogle || []).push({});
+                (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
         </div>
 
