--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <meta name="twitter:title" content="Stonify5 - Online Gomoku">
     <meta name="twitter:description" content="Experience real-time multiplayer Gomoku gameplay">
     <meta name="twitter:image" content="/assets/images/og.svg">
-    
+
     <!-- Google AdSense Auto Ads -->
     <meta name="google-adsense-account" content="ca-pub-7004859261139401">
 
@@ -31,10 +31,10 @@
 
     <link rel="stylesheet" href="/css/main.css">
     <script src="/js/config.js"></script>
-    
+
     <!-- Google AdSense -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7004859261139401"
-            crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>
 </head>
 
 <body data-page="home" data-theme="dark">
@@ -84,14 +84,10 @@
 
             <!-- Top Banner Ad -->
             <div class="ad-container ad-banner">
-                <ins class="adsbygoogle"
-                     style="display:block; width:100%;"
-                     data-ad-client="ca-pub-7004859261139401"
-                     data-ad-slot="8405999782"
-                     data-ad-format="auto"
-                     data-full-width-responsive="true"></ins>
+                <ins class="adsbygoogle" style="display:block; width:100%;" data-ad-client="ca-pub-7004859261139401"
+                    data-ad-slot="8405999782" data-ad-format="auto" data-full-width-responsive="true"></ins>
                 <script>
-                     (adsbygoogle = window.adsbygoogle || []).push({});
+                    (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
             </div>
 
@@ -119,13 +115,10 @@
 
             <!-- Bottom Rectangle Ad -->
             <div class="ad-container ad-rectangle">
-                <ins class="adsbygoogle"
-                     style="display:block; width:100%;"
-                     data-ad-client="ca-pub-7004859261139401"
-                     data-ad-slot="4343449930"
-                     data-ad-format="rectangle"></ins>
+                <ins class="adsbygoogle" style="display:block; width:100%;" data-ad-client="ca-pub-7004859261139401"
+                    data-ad-slot="4343449930" data-ad-format="rectangle"></ins>
                 <script>
-                     (adsbygoogle = window.adsbygoogle || []).push({});
+                    (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
             </div>
         </div>
